--- a/Yinyang.Utilities.SQLite/Yinyang.Utilities.SQLite.csproj
+++ b/Yinyang.Utilities.SQLite/Yinyang.Utilities.SQLite.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net472;net48;net481;netstandard2.1;net6;net7</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>SQLite Connection Utility for C#.</Description>
-    <Version>1.0.0</Version>
+    <Version>1.0.0.1</Version>
     <Authors>Yinyang</Authors>
     <Product>Yinyang Sqlite Utilities</Product>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
@@ -19,7 +19,7 @@
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageTags>SqlServer;</PackageTags>
+    <PackageTags>SqlLite;</PackageTags>
     <NeutralLanguage>ja-JP</NeutralLanguage>
   </PropertyGroup>
 
